--- a/web_app.html
+++ b/web_app.html
@@ -3736,6 +3736,8 @@
                 })
                 .then(res => res.json())
                 .then(data => {
+                    console.log('Mining API response:', data);
+                    console.log('User machines:', data.user_machines);
                     // Update shop with levels
                     const machine_levels = data.machine_levels || {};
                     shop.innerHTML = machines.map((m, index) => {
@@ -3777,7 +3779,7 @@
                                     <div style="display:flex;justify-content:space-between;align-items:center;">
                                         <div style="flex:1;">
                                             <div style="font-weight:900;font-size:14px;margin-bottom:4px;color:#fff;">${m.name} ${count > 1 ? `<span style="background:rgba(102,126,234,0.6);padding:2px 6px;border-radius:4px;font-size:10px;">x${count}</span>` : ''}</div>
-                                            <div style="font-size:11px;color:#94a3b8;">Уровень ${m.level} | ${m.hash_rate} Hash/s</div>
+                                            <div style="font-size:11px;color:#94a3b8;">Уровень ${m.level} | ${(m.hash_rate || 0).toFixed(6)} Hash/s</div>
                                             <div style="font-size:12px;color:#4ade80;margin-top:4px;font-weight:700;">Доход +${Math.floor(totalIncome).toLocaleString()} QuanHash/час</div>
                                         </div>
                                         <div style="text-align:right;">
