--- a/web_app.html
+++ b/web_app.html
@@ -3897,6 +3897,7 @@
         };
         
         function buyMachine(id, price, currency) {
+            console.log('buyMachine called:', {id, price, currency, user_id: window.user?.id});
             const anim = document.createElement('div');
             anim.style.cssText='position:fixed;top:15%;left:50%;transform:translate(-50%,-50%);z-index:10000;pointer-events:none;';
             anim.innerHTML='<div style="background:linear-gradient(135deg,rgba(102,126,234,0.95),rgba(118,75,162,0.95));padding:8px 16px;border-radius:20px;font-size:14px;box-shadow:0 4px 15px rgba(102,126,234,0.5);color:#fff;font-weight:700;display:flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,0.2);"><span style="font-size:16px;">⚡</span> Покупка...</div>';
@@ -3915,6 +3916,7 @@
             })
             .then(res => res.json())
             .then(data => {
+                console.log('buyMachine response:', data);
                 if(data.success) {
                     // Success notification - like in shop
                     anim.innerHTML='<div style="background:linear-gradient(135deg,rgba(34,197,94,0.95),rgba(16,185,129,0.95));padding:8px 16px;border-radius:20px;font-size:14px;box-shadow:0 4px 15px rgba(16,185,129,0.5);color:#fff;font-weight:700;display:flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,0.2);"><span style="font-size:16px;">✨</span> Машина улучшена!</div>';
@@ -3931,6 +3933,7 @@
                             else if(btn.textContent.includes('QuanHash')) currentCat = 'quanhash';
                         }
                     });
+                    console.log('Reloading category:', currentCat);
                     loadMiningCategory(currentCat);
                     loadData();
                 } else {
