--- a/web_app.html
+++ b/web_app.html
@@ -1939,11 +1939,13 @@
                         `;
                         
                         cardsList.forEach(([name, info]) => {
+                            // Convert per minute income to per hour
+                            const incomePerHour = Math.floor(info.totalIncome * 60);
                             purchasesContent += `
                                 <div style="background:rgba(59,130,246,0.3);padding:12px;border-radius:10px;margin-bottom:8px;border:1px solid rgba(59,130,246,0.5);">
                                     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:5px;">
                                         <span style="color:#fff;font-weight:700;font-size:13px;">${name} ${info.count > 1 ? `x${info.count}` : ''}</span>
-                                        <span style="color:#4ade80;font-weight:700;font-size:13px;">+${Math.floor(info.totalIncome)}/мин</span>
+                                        <span style="color:#4ade80;font-weight:700;font-size:13px;">+${incomePerHour}/час</span>
                                     </div>
                                     <div style="color:#86efac;font-size:11px;font-weight:600;">✨ Постоянная карточка</div>
                                 </div>
