--- a/web_app.html
+++ b/web_app.html
@@ -2582,6 +2582,7 @@
             if (!audioContext) {
                 try {
                     audioContext = new (window.AudioContext || window.webkitAudioContext)();
+                    console.log('AudioContext created, state:', audioContext.state);
                 } catch(e) {
                     console.log('Audio not supported:', e);
                     return;
@@ -2589,7 +2590,10 @@
             }
             // Resume AudioContext if suspended (required by modern browsers)
             if (audioContext.state === 'suspended') {
-                audioContext.resume().catch(e => {
+                console.log('AudioContext suspended, attempting to resume...');
+                audioContext.resume().then(() => {
+                    console.log('AudioContext resumed successfully, state:', audioContext.state);
+                }).catch(e => {
                     console.log('Audio resume failed:', e);
                 });
             }
@@ -4935,7 +4939,7 @@
                                             </div>
                                         </div>
                                         <label style="position:relative;display:inline-block;width:50px;height:28px;">
-                                            <input type="checkbox" id="soundToggle" ${savedSound ? 'checked' : ''} onchange="localStorage.setItem('soundEnabled', this.checked); updateToggleVisual(this);" style="opacity:0;width:0;height:0;">
+                                            <input type="checkbox" id="soundToggle" ${savedSound ? 'checked' : ''} onchange="console.log('Sound toggle changed:', this.checked); localStorage.setItem('soundEnabled', this.checked); updateToggleVisual(this);" style="opacity:0;width:0;height:0;">
                                             <span class="toggle-track" style="position:absolute;cursor:pointer;top:0;left:0;right:0;bottom:0;background-color:${savedSound ? '#667eea' : '#4b5563'};border-radius:34px;transition:all 0.3s;">
                                                 <span style="position:absolute;content:'';height:22px;width:22px;left:3px;bottom:3px;background-color:#fff;border-radius:50%;transition:all 0.3s;transform:translateX(${savedSound ? '22px' : '0'});"></span>
                                             </span>
