--- a/web_app.html
+++ b/web_app.html
@@ -2109,7 +2109,7 @@
                                 </div>
                                 <div style="background:rgba(0,0,0,0.3);padding:8px;border-radius:8px;">
                                     <div style="font-size:10px;color:#94a3b8;margin-bottom:3px;">🏆 Рейтинг</div>
-                                    <div style="font-size:14px;font-weight:800;color:#667eea;">${totalEarned} 🪙</div>
+                                    <div style="font-size:14px;font-weight:800;color:#667eea;">${u.rating ? Math.round(u.rating).toLocaleString() : 0}</div>
                                 </div>
                             </div>
                         </div>`;
