Change tournament prizes from stars to coins and quanhash. Style close buttons with gradient and rotation animation

--- a/web_app.html
+++ b/web_app.html
@@ -815,27 +815,35 @@
         }
 
         .close-btn {
-            background: rgba(255,255,255,0.1) !important;
-            border: none !important;
+            background: linear-gradient(135deg, rgba(239,68,68,0.3), rgba(220,38,38,0.3)) !important;
+            border: 2px solid rgba(239,68,68,0.5) !important;
             border-radius: 50% !important;
-            width: 40px !important;
-            height: 40px !important;
+            width: 42px !important;
+            height: 42px !important;
             cursor: pointer !important;
-            color: white !important;
-            font-size: 20px !important;
+            color: #fff !important;
+            font-size: 22px !important;
+            font-weight: 900 !important;
             display: flex !important;
             align-items: center !important;
             justify-content: center !important;
-            transition: all 0.3s ease !important;
+            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) !important;
             position: absolute !important;
             top: 15px !important;
             right: 15px !important;
             z-index: 1000 !important;
+            box-shadow: 0 4px 15px rgba(239,68,68,0.3), inset 0 0 20px rgba(239,68,68,0.2) !important;
+            text-shadow: 0 0 10px rgba(255,255,255,0.5) !important;
         }
 
         .close-btn:hover {
-            background: rgba(255,255,255,0.2);
-            transform: none !important;
+            background: linear-gradient(135deg, rgba(239,68,68,0.5), rgba(220,38,38,0.5)) !important;
+            transform: scale(1.15) rotate(90deg) !important;
+            box-shadow: 0 6px 25px rgba(239,68,68,0.6), inset 0 0 30px rgba(239,68,68,0.4) !important;
+        }
+        
+        .close-btn:active {
+            transform: scale(0.95) rotate(90deg) !important;
         }
 
 
@@ -2283,11 +2291,11 @@
                         <div style="background:linear-gradient(135deg,rgba(16,185,129,0.15),rgba(255,255,255,0.08));padding:16px;border-radius:12px;border:2px solid rgba(16,185,129,0.3);margin-bottom:20px;">
                             <div style="font-size:16px;font-weight:800;color:#10b981;margin-bottom:10px;">💰 Награды за ТОП-20</div>
                             <div style="font-size:13px;color:#fff;line-height:1.8;">
-                                <div>🥇 1 место: <span style="color:#ffd700;font-weight:800;">10,000 ⭐</span></div>
-                                <div>🥈 2 место: <span style="color:#c0c0c0;font-weight:800;">7,500 ⭐</span></div>
-                                <div>🥉 3 место: <span style="color:#cd7f32;font-weight:800;">5,000 ⭐</span></div>
-                                <div>4-10 места: <span style="color:#86efac;font-weight:800;">2,500 ⭐</span></div>
-                                <div>11-20 места: <span style="color:#86efac;font-weight:800;">1,000 ⭐</span></div>
+                                <div>🥇 1 место: <span style="color:#ffd700;font-weight:800;">10,000,000 💰</span> + <span style="color:#10b981;font-weight:800;">50,000 💎</span></div>
+                                <div>🥈 2 место: <span style="color:#c0c0c0;font-weight:800;">7,500,000 💰</span> + <span style="color:#10b981;font-weight:800;">37,500 💎</span></div>
+                                <div>🥉 3 место: <span style="color:#cd7f32;font-weight:800;">5,000,000 💰</span> + <span style="color:#10b981;font-weight:800;">25,000 💎</span></div>
+                                <div>4-10 места: <span style="color:#86efac;font-weight:800;">2,500,000 💰</span> + <span style="color:#10b981;font-weight:800;">12,500 💎</span></div>
+                                <div>11-20 места: <span style="color:#86efac;font-weight:800;">1,000,000 💰</span> + <span style="color:#10b981;font-weight:800;">5,000 💎</span></div>
                             </div>
                         </div>
                         
@@ -2307,6 +2315,7 @@
                             <div style="font-size:12px;color:#fff;line-height:1.6;">
                                 • VIP игроки получают x2 бонусы<br>
                                 • Призовой фонд обновляется еженедельно<br>
+                                • Награды начисляются автоматически<br>
                                 • Все участники ТОП-100 видят свой прогресс
                             </div>
                         </div>
