feat: Restore v6.31 with premium VIP effects and animations

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v4.3 - Updated boost descriptions, renamed categories, improved autobot - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
+<!-- Quantum Nexus v6.31 - Enhanced Buy Currency modal with premium VIP effects and animations -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Nexus v2.0</title>
+    <title>Quantum Nexus v6.31</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         * {
